--- a/src/app/layout/automation/make-strategy-execution/make-strategy-execution.component.html
+++ b/src/app/layout/automation/make-strategy-execution/make-strategy-execution.component.html
@@ -1,4 +1,4 @@
-<app-page-header [heading]="'Add strategy execution order'" [icon]="'fa-magic'"></app-page-header>
+<app-page-header [heading]="'Add strategy'" [icon]="'fa-magic'"></app-page-header>
 
 <form #makeOrderForm="ngForm">
 
@@ -8,20 +8,20 @@
 
             <div class="form-group">
                 <label>Exchange Name</label>
-                
+
                 <div class="form-control">
                 <strong>{{ exchangeName }}</strong>
                 </div>
             </div>
-            
+
             <div class="form-group">
                 <label>Strategy</label>
-                
+
                 <select class="form-control" name="selectedStrategy" [(ngModel)]="selectedStrategy">
                     <option *ngFor="let strategy of strategies" [value]="strategy.name">{{ strategy.name }}</option>
                 </select>
             </div>
-            
+
             <div class="form-group">
                 <label for="currency-pair-typeahead">Exchange currency pair</label>
                 <input name="exchangePair" id="currency-pair-typeahead" type="text" class="form-control exchange-pair-input"
@@ -30,7 +30,7 @@
                 [(ngModel)]="exchangePair" [ngbTypeahead]="searchExchangePair" (input)="$event.target.value = $event.target.value.toUpperCase()">
                 <div class="invalid-feedback">Provide valid exchange pair</div>
             </div>
-            
+
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
@@ -55,29 +55,29 @@
                     </div>
                 </div>
             </div>
-            
+
             <app-buy-lower-and-lower-specific-parameters (speciticParametersChanged)="onSpecificParameters($event)" *ngIf="selectedStrategy == 'BuyLowerAndLower'"></app-buy-lower-and-lower-specific-parameters>
-            
+
         </div>
         <div class="col-md-6">
 
             <div class="form-group">
                 <label>Clients</label>
-            
+
                 <div class="checkbox" *ngFor="let selectedClient of selectedClients">
                     <label>
                         <input type="checkbox" name="selectedClients" [value]="true" [(ngModel)]="selectedClient.checked"> {{ selectedClient.client.name }}
                     </label>
                 </div>
             </div>
-            
+
         </div>
 
     </div>
 
-  
 
-  <button type="submit" class="btn btn-primary" (click)="showConfirmModal()" [disabled]="! canMakeStrategyExecution()">Add strategy execution</button>
+
+  <button type="submit" class="btn btn-primary" (click)="showConfirmModal()" [disabled]="! canMakeStrategyExecution()">Add strategy</button>
 
 </form>
 
