--- a/src/app/layout/orders/orders.component.html
+++ b/src/app/layout/orders/orders.component.html
@@ -4,8 +4,10 @@
     <div class="card mb-3">
         <div class="card-header">
             Orders
-
-            <button class="btn btn-info" (click)="loadData()" [disabled]="pending"><i class="fa fa-refresh" [class.is-pending]="pending"></i> Refresh orders</button>
+            <button class="btn btn-info" (click)="loadData()" [disabled]="pending">
+                <i class="fa fa-refresh" [class.is-pending]="pending"></i>
+                Refresh orders
+            </button>
         </div>
         <table class="card-body table table-hover">
             <thead>
@@ -28,23 +30,31 @@
                 <tr>
                     <th colspan="10">
                         {{ client.name }}
-                        <span *ngIf="failedExchanges.length > 0" class="badge badge-warning">There might be more open orders. Failed getting orders for: {{ failedExchanges.join(',') }}</span>
+                        <span *ngIf="getFailedExchangesForClient(client).length > 0" class="badge badge-warning">
+                            There might be more open orders. Failed getting orders for exchanges:
+                        </span>
+                        <ul *ngIf="getFailedExchangesForClient(client).length > 0">
+                            <li *ngFor="let failedExchange of getFailedExchangesForClient(client)">
+                                {{ failedExchange }}
+                            </li>
+                        </ul>
                     </th>
                 </tr>
 
-                <tr *ngFor="let order of ordersForClient(client)" [class]="'view-state-'+order.viewState">
+                <tr *ngFor="let order of ordersForClient(client)" [class]="'view-state-'+orderViewState[order.orderId]">
 
                     <th><input type="checkbox" (change)="onSelectOrder($event.target.checked, order)"></th>
                     <td>{{ order.exchangeName }}</td>
                     <td>{{ order.orderId }}</td>
-                    <td>{{ order.currencyPairSymbol() }}</td>
+                    <td>{{ getOrderCurrencyPairSymbol(order) }}</td>
                     <td>{{ order.orderType }}</td>
                     <td>{{ order.orderStatus }}</td>
                     <td>{{ order.orderedAmount }}</td>
                     <td>{{ order.price }}</td>
                     <td>{{ order.timestamp | date: 'y-MM-dd HH:mm:ss' }}</td>
                     <td>
-                        <button (click)="cancelOpenOrder(order)" class="btn btn-danger btn-sm" [disabled]="order.viewState != 'enabled'">
+                        <button (click)="cancelOpenOrder(order)" class="btn btn-danger btn-sm"
+                                [disabled]="orderViewState[order.orderId] != 'enabled'">
                             Cancel
                         </button>
                     </td>
@@ -58,8 +68,9 @@
             </tbody>
         </table>
     </div>
-
-    <button class="btn btn-danger btn-sm" (click)="cancelSeletedOrders()" [disabled]="pending || selectedOrders.length == 0"><i class="fa fa-trash-o"></i> Cancel selected orders</button>
+    <button class="btn btn-danger btn-sm" (click)="cancelSelectedOrders()"
+            [disabled]="pending || selectedOrders.length == 0">
+        <i class="fa fa-trash-o"></i> Cancel selected orders
+    </button>
 </div>
-
 <app-order-delete #orderDelete></app-order-delete>
