Add displaying USD value in wallet

--- a/src/app/layout/orders/orders.component.html
+++ b/src/app/layout/orders/orders.component.html
@@ -5,8 +5,7 @@
         <div class="card-header">
             Orders
             <button class="btn btn-info" (click)="loadData()" [disabled]="pending">
-                <i class="fa fa-refresh" [class.is-pending]="pending"></i>
-                Refresh orders
+                <i class="fa fa-refresh" [class.is-pending]="pending"></i> Refresh orders
             </button>
         </div>
         <table class="card-body table table-hover">
