--- a/src/app/layout/wallets/wallets.component.html
+++ b/src/app/layout/wallets/wallets.component.html
@@ -2,42 +2,44 @@
     <app-page-header [heading]="'Wallets'" [icon]="'fa-money'"></app-page-header>
     <div class="card mb-3">
         <button class="btn btn-info" (click)="fetchPrices()" [disabled]="pendingPriceRefresh">
-            <i class="fa fa-refresh" [class.is-pending]="pending"></i>Refresh prices
+            <i class="fa fa-refresh" [class.is-pending]="pendingPriceRefresh"></i> Refresh prices
         </button>
         <p>Last prices refresh: {{ getLastPriceRefreshTime() | date: 'y-MM-dd HH:mm:ss' || '-' }}</p>
     </div>
-    <div *ngFor="let client of clients" class="card mb-3">
-        <h3>{{ client.name }}</h3>
-        <button class="btn btn-info" (click)="fetchExchangeBalancesForClient(client)" [disabled]="pending">
-            <i class="fa fa-refresh" [class.is-pending]="pending"></i>Refresh amounts
-        </button>
-        <p>Last refresh: {{ getLastClientWalletRefreshTime(client) | date: 'y-MM-dd HH:mm:ss' || '-' }}</p>
-        <ng-container *ngFor="let exchangeBalance of exchangeBalancesForClient(client)">
-            <h4>{{ exchangeBalance.exchangeName }}</h4>
-            <span *ngIf="exchangeBalance.errorMessage != null" class="badge badge-warning">
+    <ng-container *ngIf="!pendingPriceRefresh">
+        <div *ngFor="let client of clients" class="card mb-3">
+            <h3>{{ client.name }}</h3>
+            <button class="btn btn-info" (click)="fetchExchangeBalancesForClient(client)" [disabled]="pending">
+                <i class="fa fa-refresh" [class.is-pending]="pending"></i> Refresh amounts
+            </button>
+            <p>Last refresh: {{ getLastClientWalletRefreshTime(client) | date: 'y-MM-dd HH:mm:ss' || '-' }}</p>
+            <ng-container *ngFor="let exchangeBalance of exchangeBalancesForClient(client)">
+                <h4>{{ exchangeBalance.exchangeName }}</h4>
+                <span *ngIf="exchangeBalance.errorMessage != null" class="badge badge-warning">
                 {{ exchangeBalance.errorMessage }}
             </span>
-            <span *ngIf="exchangeBalance.currencyBalances.length == 0 && exchangeBalance.errorMessage == null"
-                  class="badge badge-secondary">No currencies hold</span>
-            <table *ngIf="exchangeBalance.currencyBalances.length > 0 && exchangeBalance.errorMessage == null"
-                   class="card-body table table-hover">
-                <thead>
-                <tr>
-                    <th>Currency</th>
-                    <th>Available amount</th>
-                    <th>BTC value</th>
-                    <th>USD value</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr *ngFor="let currencyBalance of exchangeBalance.currencyBalances">
-                    <td>{{ currencyBalance.currencyCode }}</td>
-                    <td>{{ currencyBalance.available }}</td>
-                    <td>{{ getValue(currencyBalance, 'BTC') | number : '1.4' || '-' }}</td>
-                    <td>{{ getValue(currencyBalance, 'USD') | number : '1.4' || '-' }}</td>
-                </tr>
-                </tbody>
-            </table>
-        </ng-container>
-    </div>
+                <span *ngIf="exchangeBalance.currencyBalances.length == 0 && exchangeBalance.errorMessage == null"
+                      class="badge badge-secondary">No currencies hold</span>
+                <table *ngIf="exchangeBalance.currencyBalances.length > 0 && exchangeBalance.errorMessage == null"
+                       class="card-body table table-hover">
+                    <thead>
+                    <tr>
+                        <th>Currency</th>
+                        <th>Available amount</th>
+                        <th>BTC value</th>
+                        <th>USD value</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let currencyBalance of exchangeBalance.currencyBalances">
+                        <td>{{ currencyBalance.currencyCode }}</td>
+                        <td>{{ currencyBalance.available }}</td>
+                        <td>{{ getBtcValue(currencyBalance) | number : '1.8' || '-' }}</td>
+                        <td>{{ getUsdValue(currencyBalance) | number : '1.2' || '-' }}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </ng-container>
+        </div>
+    </ng-container>
 </div>
