Add displaying total BTC and USD value in wallet per exchange

--- a/src/app/layout/wallets/wallets.component.html
+++ b/src/app/layout/wallets/wallets.component.html
@@ -37,6 +37,16 @@
                         <td>{{ getBtcValue(currencyBalance) | number : '1.8' || '-' }}</td>
                         <td>{{ getUsdValue(currencyBalance) | number : '1.2' || '-' }}</td>
                     </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td class="font-weight-bold">
+                            {{ getTotalExchangeBtcValue(exchangeBalance) | number : '1.8' }}
+                        </td>
+                        <td class="font-weight-bold">
+                            {{ getTotalExchangeUsdValue(exchangeBalance) | number : '1.2' }}
+                        </td>
+                    </tr>
                     </tbody>
                 </table>
             </ng-container>
