--- a/src/app/layout/wallets/wallets.component.html
+++ b/src/app/layout/wallets/wallets.component.html
@@ -13,11 +13,13 @@
                 <i class="fa fa-refresh" [class.is-pending]="pending"></i> Refresh amounts
             </button>
             <p>Last refresh: {{ getLastClientWalletRefreshTime(client) | date: 'y-MM-dd HH:mm:ss' || '-' }}</p>
+            <p><i class="fa fa-btc"></i> Total BTC: {{ getTotalClientBtcValue(client) | number : '1.8' || '-' }}</p>
+            <p><i class="fa fa-usd"></i> Total USD: {{ getTotalClientUsdValue(client) | number : '1.2' || '-' }}</p>
             <ng-container *ngFor="let exchangeBalance of exchangeBalancesForClient(client)">
                 <h4>{{ exchangeBalance.exchangeName }}</h4>
                 <span *ngIf="exchangeBalance.errorMessage != null" class="badge badge-warning">
-                {{ exchangeBalance.errorMessage }}
-            </span>
+                    {{ exchangeBalance.errorMessage }}
+                </span>
                 <span *ngIf="exchangeBalance.currencyBalances.length == 0 && exchangeBalance.errorMessage == null"
                       class="badge badge-secondary">No currencies hold</span>
                 <table *ngIf="exchangeBalance.currencyBalances.length > 0 && exchangeBalance.errorMessage == null"
