Display 'Users' instead of 'Clients' (more intuitive) no changes at model level: logged user has clients and clients are named as users

--- a/src/app/layout/automation/make-strategy-execution/make-strategy-execution.component.html
+++ b/src/app/layout/automation/make-strategy-execution/make-strategy-execution.component.html
@@ -62,7 +62,7 @@
         <div class="col-md-6">
 
             <div class="form-group">
-                <label>Clients</label>
+                <label>Users</label>
 
                 <div class="checkbox" *ngFor="let selectedClient of selectedClients">
                     <label>
