--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
         </a>
 
         <a routerLink="/clients" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-users"></i>&nbsp;{{ 'Clients' | translate }}
+            <i class="fa fa-fw fa-users"></i>&nbsp;{{ 'Users & API keys' | translate }}
         </a>
 
         <a routerLink="/wallets" [routerLinkActive]="['router-link-active']" class="list-group-item">
