--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,3 +1,8 @@
-<h2 class="text-muted">Dashboard <small>Statistics Overview</small></h2>
-  
-<p>It's nothing here.</p>
+<h2 class="text-muted">Welcome
+    <small></small>
+</h2>
+
+<p>Start with adding exchange keys.</p>
+<p>
+    Depending on your subscription you might have one user - your keys or add multiple users to manage multiple exchange  accounts of many users at once.
+</p>
