--- a/src/app/layout/clients/client-create/client-create.component.html
+++ b/src/app/layout/clients/client-create/client-create.component.html
@@ -1,16 +1,17 @@
 <div>
-  <app-page-header [heading]="'Create client'" [icon]="'fa-user'" [parents]="[ { heading: 'Clients', link: '/clients', icon: 'users' } ]"></app-page-header>
-  
-  <form (ngSubmit)="onSubmit(createForm)" #createForm="ngForm">
-      <div class="row">
-          <div class="col-md-6">
-              <fieldset class="form-group">
-                  <label>Name</label>
-                  <input class="form-control" name="name" ngModel required>
-              </fieldset>
+    <app-page-header [heading]="'Add user'" [icon]="'fa-user'"
+                     [parents]="[ { heading: 'Users', link: '/clients', icon: 'users' } ]"></app-page-header>
 
-              <button type="submit" class="btn btn-primary" [disabled]="createForm.invalid || loading">Save</button>
-          </div>
-      </div>
-  </form>
+    <form (ngSubmit)="onSubmit(createForm)" #createForm="ngForm">
+        <div class="row">
+            <div class="col-md-6">
+                <fieldset class="form-group">
+                    <label>Name</label>
+                    <input class="form-control" name="name" ngModel required>
+                </fieldset>
+
+                <button type="submit" class="btn btn-primary" [disabled]="createForm.invalid || loading">Save</button>
+            </div>
+        </div>
+    </form>
 </div>
