--- a/src/app/layout/automation/make-strategy-execution/buy-lower-and-lower-specific-parameters/buy-lower-and-lower-specific-parameters.component.html
+++ b/src/app/layout/automation/make-strategy-execution/buy-lower-and-lower-specific-parameters/buy-lower-and-lower-specific-parameters.component.html
@@ -2,14 +2,16 @@
     <div class="col-md-6">
         <div class="form-group">
             <label for="maxBuyPrice">Max Buy Price</label>
-            <input name="maxBuyPrice" type="text" class="form-control" value="0" (input)="onMaxBuyPrice($event.target)" required>
+            <input name="maxBuyPrice" type="text" class="form-control" value="0" (input)="onMaxBuyPrice($event.target)"
+                   required>
         </div>
     </div>
     <div class="col-md-6">
         <div class="form-group">
             <label for="dropToBuyNextRelativePercent">Drop To Buy Next Relative Percent</label>
             <div class="input-group">
-                <input name="dropToBuyNextRelativePercent" type="number" class="form-control" min="1" max="100" value="50" (input)="onDropToBuyNextRelativePercent($event.target)">
+                <input name="dropToBuyNextRelativePercent" class="form-control" type="number" min="0.1" max="50"
+                       value="0.5" step="0.1" (input)="onDropToBuyNextRelativePercent($event.target)">
                 <div class="input-group-append">
                     <span class="input-group-text">%</span>
                 </div>
