Add hint for creating keys

--- a/src/app/layout/clients/client-edit/client-edit.component.html
+++ b/src/app/layout/clients/client-edit/client-edit.component.html
@@ -16,7 +16,13 @@
                     enabled
                 </div>
                 <div class="alert alert-primary" role="alert">
-                    Keys should have following permissions: read balance, read user transactions, create/cancel buy and sell limit order, get open orders. Add keys without permission for withdrawing from exchange, autocoin does not need them
+                    Make sure you use a separate set of API keys just for autocoin, these may not work when used in
+                    multiple applications at the same time
+                </div>
+                <div class="alert alert-primary" role="alert">
+                    Keys should have following permissions: read balance, read user transactions, create/cancel buy and
+                    sell limit order, get open orders. Add keys without permission for withdrawing from exchange,
+                    autocoin does not need them
                 </div>
             </div>
             <div class="col-md-6">
