--- a/src/app/layout/wallets/wallets.component.html
+++ b/src/app/layout/wallets/wallets.component.html
@@ -13,8 +13,12 @@
                 <i class="fa fa-refresh" [class.is-pending]="pending"></i> Refresh amounts
             </button>
             <p>Last refresh: {{ getLastClientWalletRefreshTime(client) | date: 'y-MM-dd HH:mm:ss' || '-' }}</p>
-            <p><i class="fa fa-btc"></i> Total BTC: {{ getTotalClientBtcValue(client) | number : '1.8' || '-' }}</p>
-            <p><i class="fa fa-usd"></i> Total USD: {{ getTotalClientUsdValue(client) | number : '1.2' || '-' }}</p>
+            <p><i class="fa fa-btc"></i> Total BTC:
+                <span class="sensitive-data">{{ getTotalClientBtcValue(client) | number : '1.8' || '-' }}</span>
+            </p>
+            <p><i class="fa fa-usd"></i> Total USD:
+                <span class="sensitive-data">{{ getTotalClientUsdValue(client) | number : '1.2' || '-' }}</span>
+            </p>
             <ng-container *ngFor="let exchangeBalance of exchangeBalancesForClient(client)">
                 <h4>{{ exchangeBalance.exchangeName }}</h4>
                 <span *ngIf="exchangeBalance.errorMessage != null" class="badge badge-warning">
@@ -36,22 +40,22 @@
                     </thead>
                     <tbody>
                     <tr *ngFor="let currencyBalance of getSortedBalances(exchangeBalance.currencyBalances)">
-                        <td>{{ currencyBalance.currencyCode }}</td>
-                        <td>{{ currencyBalance.available }}</td>
-                        <td>{{ currencyBalance.frozen }}</td>
-                        <td>{{ currencyBalance.total }}</td>
-                        <td>{{ currencyBalance.btcValue | number : '1.8' || '-' }}</td>
-                        <td>{{ currencyBalance.usdValue | number : '1.2' || '-' }}</td>
+                        <td class="sensitive-data">{{ currencyBalance.currencyCode }}</td>
+                        <td class="sensitive-data">{{ currencyBalance.available }}</td>
+                        <td class="sensitive-data">{{ currencyBalance.frozen }}</td>
+                        <td class="sensitive-data">{{ currencyBalance.total }}</td>
+                        <td class="sensitive-data">{{ currencyBalance.btcValue | number : '1.8' || '-' }}</td>
+                        <td class="sensitive-data">{{ currencyBalance.usdValue | number : '1.2' || '-' }}</td>
                     </tr>
                     <tr>
                         <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td class="font-weight-bold">
+                        <td class="font-weight-bold sensitive-data">
                             {{ getTotalExchangeBtcValue(exchangeBalance) | number : '1.8' }}
                         </td>
-                        <td class="font-weight-bold">
+                        <td class="font-weight-bold sensitive-data">
                             {{ getTotalExchangeUsdValue(exchangeBalance) | number : '1.2' }}
                         </td>
                     </tr>
