Hide selecting client for creating strategy when only 1 client

--- a/src/app/layout/automation/make-strategy-execution/make-strategy-execution.component.html
+++ b/src/app/layout/automation/make-strategy-execution/make-strategy-execution.component.html
@@ -90,7 +90,7 @@
             </app-buy-lower-and-lower-specific-parameters>
 
         </div>
-        <div class="col-md-6">
+        <div *ngIf="selectedClients.length > 1" class="col-md-6">
 
             <div class="form-group">
                 <label>Users</label>
